--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     font-family: Verdana, sans-serif;
+    line-height: 1.5;
 }
 
 a{
@@ -22,11 +23,13 @@ a{
     font-size: 48px;
     font-weight: 900;
     color: #F9FAF8;
+    line-height: 1.1;
 }
 
 .secondary-text{
     font-size: 18px;
     color: #E5E7EB;
+    flex-shrink: 1;
 }
 
 .header,
@@ -59,7 +62,6 @@ a{
     flex-wrap: wrap;
     justify-content: space-between;
     padding-bottom: 48px;
-    gap: 10%;
 }
 
 .about-description{
@@ -71,6 +73,10 @@ a{
 
 .about-description h1{
     margin: 18px 0;
+}
+
+.about-description p{
+    margin-right: 100px;
 }
 
 .about-description button{
@@ -99,9 +105,73 @@ button:hover:before{
     content: "Mooo?"
 }
 
-.main-image{
+.main-image img{
+    max-width: 100%;
+    min-width: 200px;
+    border-radius: 1em;
+}
+
+.body{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+}
+
+.funny-images{
+    padding: 32px 64px;
+}
+
+.title2{
+    text-align: center;
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+    padding-bottom: 20px;
+    border-bottom: #dee2e6;
+    border-style: solid;
+    border-top: hidden;
+    border-left: hidden;
+    border-right: hidden;
+}
+
+.goats-container{
+    display: flex;
+    justify-content: space-between;
+    flex: auto;
+    flex-wrap: wrap;
+}
+
+.image,
+.sport-image{
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    overflow: hidden;
+    justify-content: center;
+}
+
+.image img{
+    width: 300px;
+}
+
+.sport-image img{
+    width: 400px;
+}
+
+.image img,
+.sport-image img{
+    max-width: 100%;
+    margin-bottom: 10px;
+    border-radius: 0.3em;
+}
+
+.sub-text{
+    text-align: center;
+    max-width: 100%;
+    width: 300px;
+    margin-bottom: 20px;
+    color: #1F2937;
+    font-size: 14px;
+    flex: auto;
+    align-items: center;
+    justify-content: center;
+    display: flex;
 }
