--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ a{
 .main,
 .footer{
     background-color: #1F2937;
-    padding: 16px 64px;
+    padding: 16px 5%;
 }
 
 .header{
@@ -122,7 +122,7 @@ a{
 }
 
 .funny-images{
-    padding: 32px 64px;
+    padding: 32px 5%;
 }
 
 .title2{
@@ -186,7 +186,7 @@ a{
 .quote{
     display: flex;
     flex-direction: column;
-    padding: 2.75em 5em;
+    padding: 2.75em 5%;
     background-color: #E5E7EB;
     font-size: 28px;
     color: #1F2937;
@@ -198,21 +198,23 @@ a{
 }
 
 .signup{
-    padding: 100px 256px;
+    padding: 100px 15%;
 }
 
 .signup-box{
     display: flex;
     background-color: #3882F6;
     border-radius: 0.5em;
-    padding: 40px 80px;
+    padding: 40px 10%;
     justify-content: space-between;
     align-items: center;
+    min-width: 200px;
+    gap: 15px;
+    flex-wrap: wrap;
 }
 
 .messages{
     color: white;
-
 }
 
 .signup-box button{
