--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,10 @@ a{
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    top: 0;
+    position: fixed;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 /* unordered list for navigation */
@@ -68,6 +72,7 @@ a{
     justify-content: space-between;
     padding-bottom: 48px;
     gap: 30px;
+    margin-top: 60px;
 }
 
 .about-description{
